Bugfix der Bilderanzeige in der Hilfe
Change-Id: Ia8c758acfb726fc8be4e34818a0dd096d64cdd46
Signed-off-by: Stephan Humme <stephan.humme@generali.de>